--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dotenv": "^17.1.0",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
-    "multer": "^2.0.1",
-    "puppeteer": "^24.10.2"
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
